Fixing alignment of header, h2, and policy environment legend

--- a/src/components/views/PolicyPage/ListPoliciesPage/IntroSection/IntroSection.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/IntroSection/IntroSection.module.scss
@@ -1,4 +1,7 @@
 .introSection {
+  h2 {
+    margin-top: 25px;
+  }
   h3 {
     font-family: Rawline;
     font-style: normal;
