--- a/src/components/views/PolicyPage/ListPoliciesPage/PolicyEnvironmentPlot/Legend/Legend.module.scss
+++ b/src/components/views/PolicyPage/ListPoliciesPage/PolicyEnvironmentPlot/Legend/Legend.module.scss
@@ -1,8 +1,10 @@
 .container {
+  margin-top: 31px;
+  font-size: 16px;
   margin-left: 3em;
   .entry {
     display: flex;
-    margin-top: 1em;
+    margin-bottom: 1em;
 
     .key {
       position: relative;
